--- a/src/css/common.css
+++ b/src/css/common.css
@@ -49,7 +49,7 @@ h1,h2,h3,h4,h5,h6,p{
 
     @media screen and (min-width: 768px) {
       .container {
-        max-width: 768px;
+        width: 768px;
         padding-left: 32px;
         padding-right: 32px;
         margin: 0 auto;
@@ -62,7 +62,7 @@ h1,h2,h3,h4,h5,h6,p{
 
     @media screen and (min-width: 1280px) {
       .container {
-        max-width: 1280px;
+        width: 1280px;
         padding-left: 50px;
         padding-right: 50px;
         margin: 0 auto;
@@ -75,7 +75,7 @@ h1,h2,h3,h4,h5,h6,p{
     
     @media screen and (min-width: 1440px) {
       .container {
-        max-width: 1440px;
+        width: 1440px;
         padding-left: 100px;
         padding-right: 100px;
         margin: 0 auto;
