--- a/src/css/our-collection.css
+++ b/src/css/our-collection.css
@@ -1,6 +1,5 @@
 /*  */
 .our-collection {
-    
     padding-top: 18px;
     padding-bottom: 80px; 
     background-image: url(/img/our-collection/collection-bg-mobile.png);
@@ -9,7 +8,6 @@
         
 }
 
- 
 .our-collection-title {
 font-weight: 500;
 font-size: 32px;
@@ -29,15 +27,16 @@ margin-bottom: 40px;
 }
 
 .our-collection-item {
-    width: 100%;
-       
+    width: 100%;      
 }
 
 .our-collection-picture img {
-    border-radius: 4px;  
-          
+    border-radius: 4px;           
 }
 
+.our-picture-back img {
+border-radius: 4px;
+}
 .our-collection-item-name {
 font-weight: 500;
 font-size: 14px;
@@ -98,3 +97,49 @@ color: rgba(252, 249, 249, 0.4);
     }
 }
 
+/* ====== FLIP-CARD ====== */
+
+.back img {
+    object-fit: cover;
+    width: 100%;
+    height: 430px;
+
+}
+.flip-block-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+}
+
+
+.flip-block-inner .our-collection-picture {
+    backface-visibility: hidden;
+    transition: all 1500ms ease-in-out;
+}
+
+
+.flip-block-inner .our-picture-back {
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 1500ms ease-in-out;
+}
+
+.flip-block-inner:hover .our-collection-picture,
+.flip-block-inner:focus .our-collection-picture {
+    transform: rotateY(-180deg);
+}
+
+
+.flip-block-inner:hover .our-picture-back,
+.flip-block-inner:focus .our-picture-back {
+    transform: rotateY(0deg);
+}
