--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -6,7 +6,7 @@
         <span class="order-yellow-text">Your order</span> is our priority:
         Personalized approach and quality of service
       </h2>
-      <form action="" class="order-form">
+      <form class="order-form">
         <div class="order-form-input-wrapper">
           <input
             class="order-form-input-field"
