--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,22 +12,22 @@
         </a>
         <ul class="header-navigation-list">
           <li>
-            <a class="header-navigation-link" href="#about-us-section">
+            <a class="header-navigation-link" href="#about-us-id">
               About us
             </a>
           </li>
           <li>
-            <a class="header-navigation-link" href="#our-collection-section">
+            <a class="header-navigation-link" href="#our-collection" >
               Our collection
             </a>
           </li>
           <li>
-            <a class="header-navigation-link" href="#customer-order-section">
+            <a class="header-navigation-link" href="#order-container">
               Customer order
             </a>
           </li>
           <li>
-            <a class="header-navigation-link" href="#testimonials-section">
+            <a class="header-navigation-link" href="#testimonial">
               Testimonials
             </a>
           </li>
