--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -1,6 +1,6 @@
-<section class="our-collection">
+<section class="our-collection" id="our-collection" >
   <div class="container our-collection-container">
-    <h2 class="our-collection-title">Our collection</h2>
+    <h2 class="our-collection-title" >Our collection</h2>
     <ul class="our-collection-list">
       <li class="our-collection-item">
     <div class="flip-block-inner">
@@ -38,12 +38,7 @@
           </div>
         
           <div class="our-picture-back">
-            <picture class="back">
-              <source media="(min-width: 1280px)" srcset="/img/flip/1-2side.webp 1x, /img/flip/1-2side@2x.webp 2x" />
-              <source media="(min-width: 768px)" srcset="/img/flip/1-2side.webp 1x, /img/flip/1-2side@2x.webp 2x" />
-              <source media="(max-width: 767px)" srcset="/img/flip/1-2side.webp 1x, /img/flip/1-2side@2x.webp 2x" />
-              <img src="/img/our-collection/1-desk1280.webp" alt="vyshyvanka"/>
-            </picture>
+              <img src="/img/our-collection/1-desk1280.webp" srcset="/img/flip/1-2side.webp 1x, /img/flip/1-2side@2x.webp 2x" alt="vyshyvanka"/>
   <div class="our-collection-text">
     <h3 class="our-collection-item-name">
       AUGUST Poltava women's blouseRING
@@ -86,12 +81,7 @@
   </div>
           </div>
           <div class="our-picture-back">
-            <picture class="back">
-              <source media="(min-width: 1280px)" srcset="/img/flip/2-2side.webp 1x, /img/flip/2-2side@2x.webp 2x" />
-              <source media="(min-width: 768px)" srcset="/img/flip/2-2side.webp 1x, /img/flip/2-2side@2x.webp 2x" />
-              <source media="(max-width: 767px)" srcset="/img/flip/2-2side.webp 1x, /img/flip/2-2side@2x.webp 2x" />
-              <img src="/img/our-collection/2-desk1280.webp" alt="vyshyvanka" />
-            </picture>
+            <img src="/img/our-collection/2-desk1280.webp" srcset="/img/flip/2-2side.webp 1x, /img/flip/2-2side@2x.webp 2x" alt="vyshyvanka"/>
             <div class="our-collection-text">
               <h3 class="our-collection-item-name">Women's blouse Gorgany</h3>
               <p class="our-collection-item-price">3350 UAH</p>
@@ -132,12 +122,7 @@
   </div>
           </div>
           <div class="our-picture-back">
-            <picture class="back">
-              <source media="(min-width: 1280px)" srcset="/img/flip/3-2side.webp 1x, /img/flip/3-2side@2x.webp 2x" />
-              <source media="(min-width: 768px)" srcset="/img/flip/3-2side.webp 1x, /img/flip/3-2side@2x.webp 2x" />
-              <source media="(max-width: 767px)" srcset="/img/flip/3-2side.webp 1x, /img/flip/3-2side@2x.webp 2x" />
-              <img src="/img/our-collection/3-desk1280.webp" alt="vyshyvanka" />
-            </picture>
+            <img src="/img/our-collection/3-desk1280.webp" srcset="/img/flip/3-2side.webp 1x, /img/flip/3-2side@2x.webp 2x" alt="vyshyvanka"/>
             <div class="our-collection-text">
               <h3 class="our-collection-item-name">Women's blouse Crimea</h3>
               <p class="our-collection-item-price">4000 UAH</p>
@@ -178,12 +163,7 @@
             </div>
           </div>
           <div class="our-picture-back">
-            <picture class="back">
-              <source media="(min-width: 1280px)" srcset="/img/flip/4-2side.webp 1x, /img/flip/4-2side@2x.webp 2x" />
-              <source media="(min-width: 768px)" srcset="/img/flip/4-2side.webp 1x, /img/flip/4-2side@2x.webp 2x" />
-              <source media="(max-width: 767px)" srcset="/img/flip/4-2side.webp 1x, /img/flip/4-2side@2x.webp 2x" />
-              <img src="/img/our-collection/4-desk1280.webp" alt="vyshyvanka" />
-            </picture>
+            <img src="/img/our-collection/4-desk1280.webp" srcset="/img/flip/4-2side.webp 1x, /img/flip/4-2side@2x.webp 2x" alt="vyshyvanka"/>
             <div class="our-collection-text">
               <h3 class="our-collection-item-name">Men's shirt Verkhovina</h3>
               <p class="our-collection-item-price">3100 UAH</p>
@@ -224,12 +204,7 @@
             </div>
           </div> 
   <div class="our-picture-back">
-    <picture class="back">
-      <source media="(min-width: 1280px)" srcset="/img/flip/5-2side.webp 1x, img/flip/5-2side@2x.webp 2x" />
-      <source media="(min-width: 768px)" srcset="/img/flip/5-2side.webp 1x, img/flip/5-2side@2x.webp 2x" />
-      <source media="(max-width: 767px)" srcset="/img/flip/5-2side.webp 1x, img/flip/5-2side@2x.webp 2x" />
-      <img src="/img/our-collection/5-desk1280.webp" alt="vyshyvanka" />
-    </picture>
+    <img src="/img/our-collection/5-desk1280.webp" srcset="/img/flip/5-2side.webp 1x, /img/flip/5-2side@2x.webp 2x" alt="vyshyvanka"/>
     <div class="our-collection-text">
       <h3 class="our-collection-item-name">Mountain men's shirt</h3>
       <p class="our-collection-item-price">3300 UAH</p>
@@ -270,12 +245,7 @@
             </div>
           </div>
         <div class="our-picture-back">
-          <picture class="back">
-            <source media="(min-width: 1280px)" srcset="/img/flip/6-2side.webp 1x, /img/flip/6-2side@2x.webp 2x" />
-            <source media="(min-width: 768px)" srcset="/img/flip/6-2side.webp 1x, /img/flip/6-2side@2x.webp 2x" />
-            <source media="(max-width: 767px)" srcset="/img/flip/6-2side.webp 1x, /img/flip/6-2side@2x.webp 2x" />
-            <img src="/img/our-collection/6-desk1280.webp" alt="vyshyvanka" />
-          </picture>
+          <img src="/img/our-collection/6-desk1280.webp" srcset="/img/flip/6-2side.webp 1x, /img/flip/6-2side@2x.webp 2x" alt="vyshyvanka"/>
           <div class="our-collection-text">
             <h3 class="our-collection-item-name">Men's shirt Yasen</h3>
             <p class="our-collection-item-price">1700 UAH</p>
