--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,8 +1,8 @@
-<div class="order-container" id="order-container">
+<div class="order-container" >
   <div class="order-girl-green"></div>
   <div class="order-form-desk">
     <div class="order-input-fields-set">
-      <h2 class="order-form-header">
+      <h2 class="order-form-header" id="order-container">
         <span class="order-yellow-text">Your order</span> is our priority:
         Personalized approach and quality of service
       </h2>
