--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-container">
       <nav class="header-navigation">
-        <a href="/index.html">
+        <a href="./index.html">
           <img
             src="/img/svg-icons/logo.svg"
             alt="Vyshyvanka Vibes logo"
@@ -12,12 +12,10 @@
         </a>
         <ul class="header-navigation-list">
           <li>
-            <a class="header-navigation-link" href="#about-us-id">
-              About us
-            </a>
+            <a class="header-navigation-link" href="#about-us-id"> About us </a>
           </li>
           <li>
-            <a class="header-navigation-link" href="#our-collection" >
+            <a class="header-navigation-link" href="#our-collection">
               Our collection
             </a>
           </li>
@@ -90,7 +88,7 @@
           </ul>
         </address>
         <button
-          class="mobile-open-btn button"
+          class="mobile-open-btn button menu-btn-open"
           type="button"
           aria-label="Open mobile menu"
         >
