--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -7,7 +7,7 @@
           >+380 (68) 443-94-26</a
         >
       </address>
-      <button class="mobile-menu-close-btn" type="button">
+      <button class="mobile-menu-close-btn menu-btn-close" type="button">
         <svg class="mobile-menu-close-btn-icon" width="18" height="18">
           <use href="/img/svg-icons/svg.svg#icon-x"></use>
         </svg>
