--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -16,16 +16,16 @@
     <nav class="mobile-menu-nav">
       <ul class="mobile-menu-list">
         <li class="mobile-menu-list-items">
-          <a href="">About us</a>
+          <a href="#about-us">About us</a>
         </li>
         <li class="mobile-menu-list-items">
-          <a href="">Our collection</a>
+          <a href="#collection">Our collection</a>
         </li>
         <li class="mobile-menu-list-items">
-          <a href="">Customer order</a>
+          <a href="#order">Customer order</a>
         </li>
         <li class="mobile-menu-list-items">
-          <a href="">Testimonials</a>
+          <a href="#testimonials">Testimonials</a>
         </li>
       </ul>
     </nav>
