--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="header-container">
       <nav class="header-navigation">
-        <a href="./index.html">
+        <a href="./">
           <img
             src="/img/svg-icons/logo.svg"
             alt="Vyshyvanka Vibes logo"
