--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,6 +2,7 @@
 <footer class="section footer">
 
                     <div class="container footer-container">
+                        <nav>
                             <ul class="footer-list">
                                 <li class="footer-link">
                                     <a href="#about-us-id" class="footer-anchor">About us</a>
@@ -16,6 +17,7 @@
                                     <a href="#testimonials" class="footer-anchor">Testimonials</a>
                                         </li>
                             </ul>
+                        </nav>
                         
                             <p class="slogan">
                                 <span class="animation">A</span> 
