--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,7 +11,7 @@
                                     <a href="#order-container" class="footer-anchor">Customer order</a>
                                 </li>
                                 <li class="footer-link">
-                                    <a href="#" class="footer-anchor">Our collection</a>
+                                    <a href="#our-collection" class="footer-anchor">Our collection</a>
                                         </li>
                                 <li class="footer-link">
                                     <a href="#testimonials" class="footer-anchor">Testimonials</a>
