--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,7 +25,7 @@
             </a>
           </li>
           <li>
-            <a class="header-navigation-link" href="#testimonial">
+            <a class="header-navigation-link" href="#testimonials">
               Testimonials
             </a>
           </li>
