--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -4,15 +4,15 @@
     gap: 40px;
     overflow-x: auto; 
     padding-top: 22px;
-    min-width: 335px; 
 }
 
 .testimonials-list-item{
     position: relative;
-    width: 335px;
+    min-width: 335px;
     border: 1px solid rgba(252, 249, 249, 0.1);
     border-radius: 4px;
-    padding: 54px 22px 18px 22px;                             
+    padding: 54px 22px 18px 22px;
+    min-height: 243px;                             
 }
 
 .testimonials-title{
@@ -54,7 +54,6 @@
     .testimonials-list{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
         gap: 32px;
         max-height: 335px;
     }
@@ -71,6 +70,9 @@
 
         .testimonials-list-item{
             padding: 54px 18px 18px 18px;
+            min-width: 336px;
+            min-height: 286px;                             
+
         }
 }
 
