--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -79,6 +79,7 @@
   border: 1px solid rgba(252, 249, 249, 0.1);
   border-radius: 8px;
   padding: 14px 16px;
+  resize: none;
 }
 
 .order-form-message:active,
