fix order bg imgs styles

--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -59,7 +59,7 @@
             media="(min-width: 768px)"
           />
 
-          <img src="/img/your-order/your-order-desktop1280.webp" alt="jacket" />
+          <img class="order-item-img-pic" src="/img/your-order/your-order-desktop1280.webp" alt="jacket" />
         </picture>
       </div>
     </div>
