fixed img in our-collection-section. deleted span in text-footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -18,15 +18,6 @@
                             </ul>
                         </nav>
                         
-                            <p class="slogan">
-                                <span class="animation">A</span> 
-                                <span class="animation">touch</span> 
-                                <span class="animation">of</span> 
-                                <span class="animation ukrainian">Ukrainian</span> 
-                                <span class="animation">culture</span> 
-                                <span class="animation">in</span> 
-                                <span class="animation">every</span> 
-                                <span class="animation">embroidery</span>
-                            </p>
+                            <p class="slogan">A touch of <span class="ukrainian">Ukrainian</span> culture in every embroidery</p>
      </div>
     </footer>
