--- a/src/css/our-collection.css
+++ b/src/css/our-collection.css
@@ -99,7 +99,7 @@ color: rgba(252, 249, 249, 0.4);
 
 /* ====== FLIP-CARD ====== */
 
-.back img {
+.back {
     object-fit: cover;
     width: 100%;
     height: 430px;
