--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -38,7 +38,7 @@
           </div>
         
           <div class="our-picture-back">
-              <img src="/img/our-collection/1-desk1280.webp" srcset="/img/flip/1-2side.webp 1x, /img/flip/1-2side@2x.webp 2x" alt="vyshyvanka"/>
+              <img class="back" src="/img/our-collection/1-desk1280.webp" srcset="/img/flip/1-2side.webp 1x, /img/flip/1-2side@2x.webp 2x" alt="vyshyvanka" />
   <div class="our-collection-text">
     <h3 class="our-collection-item-name">
       AUGUST Poltava women's blouseRING
@@ -81,7 +81,7 @@
   </div>
           </div>
           <div class="our-picture-back">
-            <img src="/img/our-collection/2-desk1280.webp" srcset="/img/flip/2-2side.webp 1x, /img/flip/2-2side@2x.webp 2x" alt="vyshyvanka"/>
+            <img class="back" src="/img/our-collection/2-desk1280.webp" srcset="/img/flip/2-2side.webp 1x, /img/flip/2-2side@2x.webp 2x" alt="vyshyvanka"/>
             <div class="our-collection-text">
               <h3 class="our-collection-item-name">Women's blouse Gorgany</h3>
               <p class="our-collection-item-price">3350 UAH</p>
@@ -122,7 +122,7 @@
   </div>
           </div>
           <div class="our-picture-back">
-            <img src="/img/our-collection/3-desk1280.webp" srcset="/img/flip/3-2side.webp 1x, /img/flip/3-2side@2x.webp 2x" alt="vyshyvanka"/>
+            <img class="back" src="/img/our-collection/3-desk1280.webp" srcset="/img/flip/3-2side.webp 1x, /img/flip/3-2side@2x.webp 2x" alt="vyshyvanka"/>
             <div class="our-collection-text">
               <h3 class="our-collection-item-name">Women's blouse Crimea</h3>
               <p class="our-collection-item-price">4000 UAH</p>
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="our-picture-back">
-            <img src="/img/our-collection/4-desk1280.webp" srcset="/img/flip/4-2side.webp 1x, /img/flip/4-2side@2x.webp 2x" alt="vyshyvanka"/>
+            <img class="back" src="/img/our-collection/4-desk1280.webp" srcset="/img/flip/4-2side.webp 1x, /img/flip/4-2side@2x.webp 2x" alt="vyshyvanka"/>
             <div class="our-collection-text">
               <h3 class="our-collection-item-name">Men's shirt Verkhovina</h3>
               <p class="our-collection-item-price">3100 UAH</p>
@@ -204,7 +204,7 @@
             </div>
           </div> 
   <div class="our-picture-back">
-    <img src="/img/our-collection/5-desk1280.webp" srcset="/img/flip/5-2side.webp 1x, /img/flip/5-2side@2x.webp 2x" alt="vyshyvanka"/>
+    <img class="back" src="/img/our-collection/5-desk1280.webp" srcset="/img/flip/5-2side.webp 1x, /img/flip/5-2side@2x.webp 2x" alt="vyshyvanka"/>
     <div class="our-collection-text">
       <h3 class="our-collection-item-name">Mountain men's shirt</h3>
       <p class="our-collection-item-price">3300 UAH</p>
@@ -245,7 +245,7 @@
             </div>
           </div>
         <div class="our-picture-back">
-          <img src="/img/our-collection/6-desk1280.webp" srcset="/img/flip/6-2side.webp 1x, /img/flip/6-2side@2x.webp 2x" alt="vyshyvanka"/>
+          <img class="back" src="/img/our-collection/6-desk1280.webp" srcset="/img/flip/6-2side.webp 1x, /img/flip/6-2side@2x.webp 2x" alt="vyshyvanka"/>
           <div class="our-collection-text">
             <h3 class="our-collection-item-name">Men's shirt Yasen</h3>
             <p class="our-collection-item-price">1700 UAH</p>
