--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -1,5 +1,5 @@
-<!------ MOBILE MENU ------>
-<div class="mobile-menu">
+<!-- MOBILE MENU -->
+<div class="mobile-menu is-open">
   <div class="container mobile-menu-container">
     <div class="mobile-menu-header">
       <address class="mobile-menu-contacts">
@@ -16,16 +16,20 @@
     <nav class="mobile-menu-nav">
       <ul class="mobile-menu-list">
         <li class="mobile-menu-list-items">
-          <a href="#about-us">About us</a>
+          <a class="mobile-menu-list-link" href="#about-us-id">About us</a>
         </li>
         <li class="mobile-menu-list-items">
-          <a href="#collection">Our collection</a>
+          <a class="mobile-menu-list-link" href="#our-collection"
+            >Our collection</a
+          >
         </li>
         <li class="mobile-menu-list-items">
-          <a href="#order">Customer order</a>
+          <a class="mobile-menu-list-link" href="#order-container"
+            >Customer order</a
+          >
         </li>
         <li class="mobile-menu-list-items">
-          <a href="#testimonials">Testimonials</a>
+          <a class="mobile-menu-list-link" href="#testimonials">Testimonials</a>
         </li>
       </ul>
     </nav>
