--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -2,7 +2,7 @@
     <div class="container container-testimonials">
     <h2 class="section-titel">Testimonials</h2>
     <ul class="list-testimonials">
-        <li class="item-testimonials">
+        <li class="item-testimonials item-1-hidden">
             <img class="testimonials-list-avatar" srcset="/img/testimonials/maria-tkachuk.webp 1x, /img/testimonials/maria-tkachuk@2x.webp 2x" src="/img/testimonials/maria-tkachuk.webp" alt="maria-tkachuk" width="64" height="64">
         <div class="cards-testimonials">
             <h3 class="titel-testimonials-fullname">Maria Tkachuk</h3>
@@ -11,7 +11,7 @@
             and refinement in every detail.</p>
         </div>
         </li>
-        <li class="item-testimonials">
+        <li class="item-testimonials item-2-hidden">
             <img class="testimonials-list-avatar" srcset="/img/testimonials/sergey-rybachok.webp 1x, /img/testimonials/sergey-rybachok@2x.webp 2x" src="/img/testimonials/sergey-rybachok.webp" alt="sergey-rybachok" width="64" height="64">
         <div class="cards-testimonials">
             <h3 class="titel-testimonials-fullname">Sergey Rybachok</h3>
@@ -20,7 +20,7 @@
             find something special and unique.</p>
         </div>
         </li>
-        <li class="item-testimonials">
+        <li class="item-testimonials item-3-hidden">
             <img class="testimonials-list-avatar" srcset="/img/testimonials/natalia-chatuk.webp 1x, /img/testimonials/natalia-chatuk@2x.webp 2x" src="/img/testimonials/natalia-chatuk.webp" alt="natalia-chatuk" width="64" height="64">
             <div class="cards-testimonials">
                 <h3 class="titel-testimonials-fullname">Natalia Chatuk</h3>
