--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -20,20 +20,21 @@
         font-size: 32px;
         line-height: 1.3;
         letter-spacing: -0.03em;
-        color: #fcf9f9
+        color: #fcf9f9;
+        text-align: left;
 }
 img.testimonials-list-avatar {
         position: absolute;
+        top: 0;
+        transform: translate(-50%, -40%);
         border-radius: 50%;
         box-shadow: 0 1px 4px 0 rgba(16, 24, 40, 0.06);
         margin-bottom: 14px;
 }
-.list-testimonials {
-        max-width: 335px;
-        height: 243px;
+li.item-testimonials {
         border: 1px solid rgba(252, 249, 249, 0.1);
         border-radius: 4px;
-        padding: 0px 18px 18px 18px;
+        padding: 0 18px 18px 18px;
        box-shadow: 0 2px 32px 4px rgba(18, 20, 23, 0.02);
        margin-top: 24px;
 }
@@ -55,6 +56,13 @@ img.testimonials-list-avatar {
 }
 
 @media screen and (min-width: 320px) {
+    .item-testimonials.item-2-hidden,
+    .item-testimonials.item-3-hidden {
+        display: none;
+    }
+    li.item-testimonials {
+        max-width: 335px;
+    }
     .list-testimonials {
         flex-direction: column;
         flex-wrap: wrap;
@@ -79,17 +87,14 @@ img.testimonials-list-avatar {
         text-align: center;
         color: rgba(252, 249, 249, 0.4);
     }
-    li.item-testimonials {
-        padding: 24px, 0px, 0px, 0px;
-        max-width: 335px;
-        height: 267px;
-    }
 }
 
 @media screen and (min-width: 768px) {
+    .item-testimonials.item-3-hidden {
+        display: none;
+    }
     .cards-testimonials {
-        width: 336px;
-        height: 310px;
+        padding-top: 40px;
         gap: 8px; 
         text-align: center;
     }
@@ -101,20 +106,15 @@ img.testimonials-list-avatar {
         padding-left: 32px;
         padding-top: 100px;
         column-gap: 40px;
+        text-align: left;
     }
     .list-testimonials {
-        max-width: 336px;
-        height: 286px;
+        display: flex;
         flex-direction: row;
         gap: 32px;
     }
-    
     li.item-testimonials {
-        display: flex;
-        padding: 24px, 0px, 0px, 0px;
-        width: 336px;
-        height: 310px;
-        gap: 32px;
+        position: relative;
     }
     li.item-testimonials {
     width: calc((100% - 32px) / 2);
@@ -127,8 +127,6 @@ img.testimonials-list-avatar {
 }
 @media screen and (min-width: 1280px) {
     .cards-testimonials {
-        width: 340px;
-        height: 192px;
         gap: 8px;
         text-align: center;
     }
@@ -141,15 +139,11 @@ img.testimonials-list-avatar {
     }
     .list-testimonials {
        flex-direction: row;
-        max-width: 376px;
-        height: 285px;
-        gap: 26px;
+       gap: 26px;
     }
     li.item-testimonials {
         display: flex;
-        padding: 24px 0px 0px 0px;
-        width: 376px;
-        height: 309px;
+        padding: 24px 0 0 0;
         flex-direction: row;
         gap: 32px;
         text-align: center;
@@ -161,8 +155,6 @@ img.testimonials-list-avatar {
 
 @media screen and (min-width: 1440px) {
     .cards-testimonials {
-        width: 360px;
-        height: 192px;
         gap: 8px;
         text-align: center;
     }
@@ -172,17 +164,12 @@ img.testimonials-list-avatar {
         right: auto;
     }
     .list-testimonials {
+        display: flex;
         flex-direction: row;
-        max-width: 396px;
-        height: 264px;
         gap: 26px;
     }
     li.item-testimonials {
-        display: flex;
-        padding: 24px 0px 0px 0px;
-        width: 396px;
-        height: 288px;
-        gap: 32px;
+        position: relative;
     }
     li.item-testimonials {
         width: calc((100% - 64px) / 3);
