--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <!--  ====== HERO -->
-<div class="hero">
+<section class="hero">
   <div class="container">
     <ul class="hero-ul">
       <li class="hero-li">
@@ -40,23 +40,28 @@
             <span class="animation">every</span>
             <span class="animation">stitch.</span>
           </h1>
-
-          <div class="hero-button">
-            <a class="hero-button-order" href="#order-container"> ORDER</a>
+          <a class="hero-button" href="#order-container">
+            ORDER
             <svg class="hero-order-icon" width="26" height="26">
               <use href="/img/svg-icons/svg.svg#icon-untitled"></use>
             </svg>
-          </div>
+          </a>
         </div>
 
         <div class="hero-star-block">
           <picture>
             <source srcset="/img/Star.webp 1x, /img/Star@2x.webp 2x" />
-            <img class="hero-star" src="" alt="star" width="52" height="51" />
+            <img
+              class="hero-star"
+              src="/img/Star.webp"
+              alt="star"
+              width="52"
+              height="51"
+            />
           </picture>
-          <h4 class="hero-text">all embroidery is made by hand</h4>
+          <p class="hero-text">all embroidery is made by hand</p>
         </div>
       </li>
     </ul>
   </div>
-</div>
+</section>
