add container in footer

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -53,6 +53,12 @@ padding-top: 40px;
 /*===== FOOTER-TABLET =====*/
 
 @media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+        padding-left: 32px;
+        padding-right: 32px;
+        margin: 0 auto;
+    }
 
     .section.footer {
     padding-bottom: 40px;
@@ -86,7 +92,12 @@ padding-top: 40px;
 /*===== FOOTER-DESKTOP-1280-1440 =====*/
 
 @media screen and (min-width: 1280px) {
-
+    .container {
+        width: 1440px;
+        padding-left: 100px;
+        padding-right: 100px;
+        margin: 0 auto;
+    }
 .footer {
     background-position: right -210px top;
     }
