--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -1,5 +1,5 @@
 <!-- MOBILE MENU -->
-<div class="mobile-menu is-open">
+<div class="mobile-menu">
   <div class="container mobile-menu-container">
     <div class="mobile-menu-header">
       <address class="mobile-menu-contacts">
