--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,8 +1,8 @@
-<section class="your-order" id="order-container">
+<section class="your-order">
   <div class="order-container">
     <div class="order-girl-green"></div>
     <div class="container order-form-desk">
-      <div class="order-input-fields-set">
+      <div class="order-input-fields-set" id="order-container">
         <h2 class="order-form-header">
           <span class="order-yellow-text">Your order</span> is our priority:
           Personalized approach and quality of service
