--- a/src/css/mobile-menu-header.css
+++ b/src/css/mobile-menu-header.css
@@ -8,7 +8,7 @@
     background: #ecd979;
     z-index: 9999999;
     overflow-y: auto;
-
+visibility: hidden;
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-image: url(../img/ornament/ornament-gray-min.png);
@@ -19,6 +19,7 @@
 
 .mobile-menu.is-open {
     transform: translateX(0%);
+    visibility: visible;
 }
 
 .mobile-menu-header {
