--- a/src/partials/mobile-menu-header.html
+++ b/src/partials/mobile-menu-header.html
@@ -1,6 +1,6 @@
 <!-- MOBILE MENU -->
 <div class="mobile-menu">
-  <div class="container mobile-menu-container">
+  <div class="mobile-menu-container">
     <div class="mobile-menu-header">
       <address class="mobile-menu-contacts">
         <a class="mobile-menu-tel" href="tel:+380684439426"
