--- a/src/css/mobile-menu-header.css
+++ b/src/css/mobile-menu-header.css
@@ -8,13 +8,14 @@
     background: #ecd979;
     z-index: 9999999;
     overflow-y: auto;
-visibility: hidden;
+    visibility: hidden;
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-image: url(../img/ornament/ornament-gray-min.png);
     background-repeat: no-repeat;
     background-size: 340px 302px;
     background-position: bottom -51px center;
+    padding: 0 20px 0;
 }
 
 .mobile-menu.is-open {
@@ -110,6 +111,7 @@ visibility: hidden;
         transform: translateX(100%);
         background-size: 545px 484px;
         background-position: bottom -120px left -74px;
+        padding: 0 32px 0;
     }
 
     .mobile-menu.is-open {
@@ -124,5 +126,11 @@ visibility: hidden;
     .mobile-menu-close-btn {
         width: 44px;
         height: 44px;
+    }
+}
+
+@media screen and (min-width: 1280px){
+    .mobile-menu{
+        display: none;
     }
 }
