add animation in js

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,9 @@
   <div class="container">
     <ul class="hero-ul">
       <li class="hero-li">
-        <picture>
+        <picture data-aos="fade-down"
+        data-aos-easing="linear"
+        data-aos-duration="1500">
           <source
             srcset="
               /img/hero/hero-desktop.webp    1x,
