--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -3,7 +3,9 @@
     <div class="container">
     <h2 class="testimonials-title">Testimonials</h2>
 <ul class="testimonials-list">
-    <li class="testimonials-list-item">
+    <li data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000" class="testimonials-list-item">
         <picture>
           <source srcset=" /img/testimonials/maria-tkachuk.png 1x, /img/testimonials/maria-tkachuk@2x.png 2x" media="(min-width: 1158px)" />
           <source srcset=" /img/testimonials/maria-tkachuk.png 1x, /img/testimonials/maria-tkachuk@2x.png 2x" media="(min-width: 768px)" />
@@ -16,7 +18,9 @@
              They have models for every taste - from classic to modern. I bought an embroidered dress to celebrate a special occasion and received impeccable service and refinement 
              in every detail.</p>
     </li>
-    <li class="testimonials-list-item">
+    <li data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000" class="testimonials-list-item">
         <picture>
           <source srcset=" /img/testimonials/sergey-rybachok.png 1x, /img/testimonials/sergey-rybachok@2x.png 2x" media="(min-width: 1158px)" />
           <source srcset=" /img/testimonials/sergey-rybachok.png 1x, /img/testimonials/sergey-rybachok@2x.png 2x" media="(min-width: 768px)" />
@@ -27,7 +31,9 @@
         <p class="testimonials-item-paragraph">Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are simply masterpieces! I fell in love with the quality of the materials and the skill of the artisans behind each product. This is my favorite embroidery shop where I always find something special and unique.</p>
 
     </li>
-    <li class="testimonials-list-item">
+    <li data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000" class="testimonials-list-item">
 
         <picture>
           <source srcset=" /img/testimonials/natalia-chatuk.png 1x, /img/testimonials/natalia-chatuk@2x.png 2x" media="(min-width: 1158px)" />
