--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -43,7 +43,8 @@
         </form>
       </div>
       <div class="order-item-img">
-        <picture>
+        <picture data-aos="fade-right"
+        data-aos-duration="2500">
           <source
             srcset="
               /img/your-order/your-order-desktop1280.webp    1x,
