--- a/src/partials/our-collection.html
+++ b/src/partials/our-collection.html
@@ -27,7 +27,7 @@
                   /img/our-collection/1mob@2x.webp 2x
                 "
               />
-              <img src="/img/our-collection/1-desk1280.webp" alt="vyshyvanka" />
+              <img src="../img//our-collection/1-desk1280.webp" alt="vyshyvanka" />
             </picture>
   <div class="our-collection-text">
     <h3 class="our-collection-item-name">
