--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -1,186 +1,98 @@
+.testimonials-list{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    overflow-x: auto; 
+    padding-top: 22px;
+    min-width: 320px;
+    overflow-y: hidden;
+}
 
-.testimonials .section-titel {
-        font-family: "Manrope", sans-serif;
-        font-weight: 500;
-        font-size: 32px;
-        line-height: 1.3;
-        letter-spacing: -0.03em;
-        color: #fcf9f9;
-        text-align: left;
+.testimonials-list-item{
+    position: relative;
+    min-width: 335px;
+    border: 1px solid rgba(252, 249, 249, 0.1);
+    border-radius: 4px;
+    padding: 54px 22px 18px 22px;
+    min-height: 243px;                             
 }
-.testimonials-list-avatar {
-        position: absolute;
-        top: 0;
-        right: 50%;
-        transform: translate(50%, -40%);
-        border-radius: 50%;
-        box-shadow: 0 1px 4px 0 rgba(16, 24, 40, 0.06);
+
+.testimonials-title{
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 1.45455;
+    letter-spacing: -0.03em;
+    color: #fcf9f9;
+    margin-bottom: 64px;
 }
-li.item-testimonials {
-        border: 1px solid rgba(252, 249, 249, 0.1);
-        border-radius: 4px;
-        padding: 0 18px 18px 18px;
-       box-shadow: 0 2px 32px 4px rgba(18, 20, 23, 0.02);
-       padding-top: 54px;
+
+.testimonials-item-title{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.5;
+    text-align: center;
+    color: #fcf9f9;
+    margin-bottom: 8px;
 }
-.titel-testimonials-fullname {
-        font-weight: 600;
-        font-size: 20px;
-        line-height: 1.5;
-        text-align: center;
-        color: #fcf9f9;
-        margin-bottom: 8px;
+
+
+.testimonials-item-paragraph{
+    font-weight: 400;
+    font-size: 14px; 
+    line-height: 1.5;
+    text-align: center;
+    color: rgba(252, 249, 249, 0.4);
+    max-width: 291px;
 }
-.text-list-testimonials {
-        font-weight: 400;
-        font-size: 14px;
-        text-align: center;
-        color: rgba(252, 249, 249, 0.4);
-        left: 22px;
-        right: 22px;
+
+.testimonials-img{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50% , -40%);
 }
-  .item-testimonials.item-1-hidden {
-      display: block;
-  }
-.item-testimonials.item-2-hidden,
-.item-testimonials.item-3-hidden {
-        display: none;
-    }
-  
-    li.item-testimonials {
-        width: 335px;
-        position: relative;
-        justify-content: center;
-    }
-    .cards-testimonials {
-        gap: 8px;
-        text-align: center;
-}
-    .list-testimonials {
-        display: flex;
-        position: relative;
-        padding: 22px 18px 38px 18px;
-        justify-content: center;
-    }
-    .testimonials .section-titel {
-        text-align: left;
-        left: 20px;
-        right: auto;
-        padding-top: 80px;
-        padding-bottom: 40px;
-    }
-    .text-list-testimonials {
-        font-weight: 400;
-        font-size: 14px;
-        text-align: center;
-        color: rgba(252, 249, 249, 0.4);
-    }
 
 @media screen and (min-width: 768px) {
-    .item-testimonials.item-3-hidden {
-        display: none;
-    }
-    .item-testimonials.item-1-hidden,
-    .item-testimonials.item-2-hidden {
-        display: block;
-    }
-    .cards-testimonials {
-        padding-top: 14px;
-        gap: 8px; 
-        text-align: center;
-    }
-    .testimonials .section-titel {
+    .testimonials-list{
         display: flex;
-        font-size: 44px;
-        line-height: 1.45;
-        letter-spacing: -0.03em;
-        padding-left: 32px;
-        padding-top: 100px;
-        column-gap: 40px;
-        text-align: left;
-    }
-    .list-testimonials {
-        display: flex;
-        position: relative;
-        padding: 18px 38px 18px 18px;
-        justify-content: center;
-    }
-    .list-testimonials {
         flex-direction: row;
         gap: 32px;
+        max-height: 335px;
     }
-    li.item-testimonials {
-        padding-top: 54px;
-        position: relative;
+
+    .testimonials-title{
+        font-size: 44px;
     }
-    li.item-testimonials {
-    width: calc((100% - 32px) / 2);
-    }
-    .text-list-testimonials {
-        font-weight: 400;
+
+    .testimonials-item-paragraph{
         font-size: 16px;
-        text-align: center;
-    }
-}
-@media screen and (min-width: 1280px) {
-    .item-testimonials.item-1-hidden,
-    .item-testimonials.item-2-hidden,
-    .item-testimonials.item-3-hidden {
-        display: block;
-    }
-    .cards-testimonials {
-        gap: 8px;
-        text-align: center;
-    }
-    .testimonials .section-titel {
-        text-align: left;
-        left: 50px;
-        right: auto;
-        padding-top: 150px;
-        column-gap: 40px;
-    }
-    .list-testimonials {
-       flex-direction: row;
-       padding: 24px 18px 39px 18px;
-       gap: 26px;
-    }
-    li.item-testimonials {
-        display: flex;
-        position: relative;
-        padding-top: 54px;
-        text-align: center;
-    }
-    li.item-testimonials {
-        width: calc((100% - 52px) / 3);
-    }
+        width: 300px;  
+        max-width: none;
+        }
+
+        .testimonials-list-item{
+            padding: 54px 18px 18px 18px;
+            min-width: 336px;
+            min-height: 286px;                             
+
+        }
 }
 
-@media screen and (min-width: 1440px) {
-    .item-testimonials.item-1-hidden,
-    .item-testimonials.item-2-hidden,
-    .item-testimonials.item-3-hidden {
-            display: block;
+@media screen and (min-width: 1280px) {
+    .testimonials-list{
+        overflow: hidden; 
+        flex-wrap: nowrap;
+        gap: 26px;
+        max-height: none;
     }
-    .cards-testimonials {
-        gap: 8px;
-        text-align: center;
-    }
-    .testimonials .section-titel {
-        text-align: left;
-        left: 100px;
-        right: auto;
-    }
-    .list-testimonials {
-        display: flex;
-        position: relative;
-        padding: 21px 18px 39px 18px;
-        text-align: center;
-    }
-    li.item-testimonials {
-        padding-top: 54px;
-        position: relative;
-    }
-    li.item-testimonials {
-        width: calc((100% - 52px) / 3);
-    }
+
+    .testimonials-item-paragraph{
+        font-size: 16px;
+        width: 340px;  
+        }
+    
+    .testimonials-list-item{
+        max-width: 376px;
+        }    
+
 }
