--- a/src/partials/testimonials.html
+++ b/src/partials/testimonials.html
@@ -1,34 +1,51 @@
-<section class="testimonials" id="testimonials">
-    <div class="container container-testimonials">
-    <h2 class="section-titel">Testimonials</h2>
-    <ul class="list-testimonials">
-        <li class="item-testimonials item-1-hidden">
-            <img class="testimonials-list-avatar" srcset="/img/testimonials/maria-tkachuk.webp 1x, /img/testimonials/maria-tkachuk@2x.webp 2x" src="/img/testimonials/maria-tkachuk.webp" alt="maria-tkachuk" width="64" height="64">
-        <div class="cards-testimonials">
-            <h3 class="titel-testimonials-fullname">Maria Tkachuk</h3>
-            <p class="text-list-testimonials">I was pleasantly surprised by the variety of embroidery offered by Vyshyvanka Vibes. They have models for every taste -
-            from classic to modern. I bought an embroidered dress to celebrate a special occasion and received impeccable service
-            and refinement in every detail.</p>
-        </div>
-        </li>
-        <li class="item-testimonials item-2-hidden">
-            <img class="testimonials-list-avatar" srcset="/img/testimonials/sergey-rybachok.webp 1x, /img/testimonials/sergey-rybachok@2x.webp 2x" src="/img/testimonials/sergey-rybachok.webp" alt="sergey-rybachok" width="64" height="64">
-        <div class="cards-testimonials">
-            <h3 class="titel-testimonials-fullname">Sergey Rybachok</h3>
-            <p class="text-list-testimonials">Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are simply masterpieces! I fell in love with the quality
-            of the materials and the skill of the artisans behind each product. This is my favorite embroidery shop where I always
-            find something special and unique.</p>
-        </div>
-        </li>
-        <li class="item-testimonials item-3-hidden">
-            <img class="testimonials-list-avatar" srcset="/img/testimonials/natalia-chatuk.webp 1x, /img/testimonials/natalia-chatuk@2x.webp 2x" src="/img/testimonials/natalia-chatuk.webp" alt="natalia-chatuk" width="64" height="64">
-            <div class="cards-testimonials">
-                <h3 class="titel-testimonials-fullname">Natalia Chatuk</h3>
-                <p class="text-list-testimonials">Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian culture. Their embroidery reflects the spirit and
-                traditions of our people. I not only buy embroidered shirts for myself, but also give them to my friends abroad as a
-                symbol of our beauty and national pride.</p>
-            </div>
-        </li>
-    </ul>
-    </div>
+<section class="section-testimonials" id="testimonials">
+  
+    <div class="container">
+    <h2 class="testimonials-title">Testimonials</h2>
+<ul class="testimonials-list">
+    <li data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000" class="testimonials-list-item">
+        <picture>
+          <source srcset=" /img/testimonials/maria-tkachuk.png 1x, /img/testimonials/maria-tkachuk@2x.png 2x" media="(min-width: 1158px)" />
+          <source srcset=" /img/testimonials/maria-tkachuk.png 1x, /img/testimonials/maria-tkachuk@2x.png 2x" media="(min-width: 768px)" />
+          <source srcset=" /img/testimonials/maria-tkachuk.png 1x, /img/testimonials/maria-tkachuk@2x.png 2x" media="(max-width: 767px)" />
+          <img class="testimonials-img" src="/img/testimonials/maria-tkachuk.png" alt="" width="64" height="64" />
+        </picture>
+        
+        <h3 class="testimonials-item-title">Maria Tkachuk</h3>
+        <p class="testimonials-item-paragraph">I was pleasantly surprised by the variety of embroidery offered by Vyshyvanka Vibes.
+             They have models for every taste - from classic to modern. I bought an embroidered dress to celebrate a special occasion and received impeccable service and refinement 
+             in every detail.</p>
+    </li>
+    <li data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000" class="testimonials-list-item">
+        <picture>
+          <source srcset=" /img/testimonials/sergey-rybachok.png 1x, /img/testimonials/sergey-rybachok@2x.png 2x" media="(min-width: 1158px)" />
+          <source srcset=" /img/testimonials/sergey-rybachok.png 1x, /img/testimonials/sergey-rybachok@2x.png 2x" media="(min-width: 768px)" />
+          <source srcset=" /img/testimonials/sergey-rybachok.png 1x, /img/testimonials/sergey-rybachok.png 2x" media="(max-width: 767px)" />
+          <img class="testimonials-img" src="/img/testimonials/sergey-rybachok@2x.png" alt="" width="64" height="64"/>
+        </picture>
+        <h3 class="testimonials-item-title">Sergey Rybachok</h3>
+        <p class="testimonials-item-paragraph">Vyshyvanka Vibes exceeds all my expectations! Their vyshyvanka are simply masterpieces! I fell in love with the quality of the materials and the skill of the artisans behind each product. This is my favorite embroidery shop where I always find something special and unique.</p>
+
+    </li>
+    <li data-aos="flip-left"
+    data-aos-easing="ease-out-cubic"
+    data-aos-duration="2000" class="testimonials-list-item">
+
+        <picture>
+          <source srcset=" /img/testimonials/natalia-chatuk.png 1x, /img/testimonials/natalia-chatuk@2x.png 2x" media="(min-width: 1158px)" />
+          <source srcset=" /img/testimonials/natalia-chatuk.png 1x, /img/testimonials/natalia-chatuk@2x.png 2x" media="(min-width: 768px)" />
+          <source srcset=" /img/testimonials/natalia-chatuk.png 1x, /img/testimonials/natalia-chatuk@2x.png 2x" media="(max-width: 767px)" />
+          <img class="testimonials-img" src="/img/testimonials/natalia-chatuk@2x.png" alt="" width="64" height="64"/>
+        </picture>
+
+        
+        <h3 class="testimonials-item-title">Natalia Chatuk</h3>
+        <p class="testimonials-item-paragraph">Vyshyvanka Vibes is a real find for everyone who appreciates Ukrainian culture. Their embroidery reflects the spirit and traditions of our people. I not only buy embroidered shirts for myself, but also give them to my friends abroad as a symbol of our beauty and national pride. </p>
+    </li>
+</ul>
+</div>
 </section>
